Java Functional Interface Test